Bump CI actions and replace deprecated wrapper constructors
- ci.yml: checkout@v6, setup-java@v5, upload-artifact@v7
- pom.xml: reword project description
- Replace new Integer()/new Long() with Integer.valueOf()/Long.valueOf()
  across IPPort, ICMPMessage, IGMPMessage, IPProtocol, LinkLayer, FileUtility
  (deprecated-for-removal constructors; semantically equivalent)